fix: text font, colors and alignements
* fix: text aligns in top of poke info container
* fix: footer color for links
* fix: default font family should be Alagard

--- a/src/app/_components/footer/footer.css
+++ b/src/app/_components/footer/footer.css
@@ -6,6 +6,14 @@
     background-color: rgb(48, 42, 38);
     width: 100%;
     height: 100%;
+
+    a {
+        color: white;
+    }
+
+    a:visited {
+        color: darkgray;
+    }
 }
 
 .footerContainer::after {
